학부모홈, 프로필수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
     package="com.example.apiconnectiontest">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
     <application
         android:allowBackup="true"
@@ -24,6 +28,8 @@
         <activity android:name=".LoginParentInfoActivity"></activity>
         <activity android:name=".TermsActivity"></activity>
         <activity android:name=".ParentHomeActivity"></activity>
-        <activity android:name=".ParentProfileActivity"></activity>
+        <activity android:name=".ParentProfilePicActivity"></activity>
+        <activity android:name=".ParentMyActivity"></activity>
+
     </application>
 </manifest>
