--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
 
     implementation 'de.hdodenhof:circleimageview:3.0.0'
-
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'gun0912.ted:tedpermission:2.0.0'
 }
-
 apply plugin: 'com.google.gms.google-services'
